Add eslinkt and phpcs

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
 /node_modules
+/public/css/app.css
 /public/hot
+/public/js/app.js
+/public/js/vue-app.js
 /public/storage
+/resources/assets/js/ziggy.js
 /storage/*.key
 /vendor
 .env
 .env.backup
+.env.dusk.local
+.env.testing
 .phpunit.result.cache
+.vscode
+_ide_helper.php
 Homestead.json
 Homestead.yaml
 npm-debug.log
