--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {
         "bootstrap": "^4.5.0",
         "cross-env": "^7.0",
+        "eslint": "^7.3.0",
+        "eslint-plugin-vue": "^6.2.2",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
@@ -24,7 +26,7 @@
         "bootstrap-vue": "^2.15.0",
         "popper.js": "^1.12",
         "portal-vue": "^2.1.7",
-        "vue-template-compiler": "^2.6.11",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.11"
     }
 }
