--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "dependencies": {
         "axios": "^0.19",
         "bootstrap-vue": "^2.15.0",
+        "editorconfig": "^0.15.3",
+        "pluralize": "^8.0.0",
         "popper.js": "^1.12",
         "portal-vue": "^2.1.7",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "vuex": "^3.4.0"
     }
 }
